Implemented rudimentary country/region search bar from API results

--- a/app/functions/package.json
+++ b/app/functions/package.json
@@ -19,5 +19,9 @@
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
   },
+  "browser": {
+    "crypto": false,
+    "stream": false
+  },  
   "private": true
 }
