--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-simple-maps": "^2.3.0",
     "twitter-api-v2": "^1.11.0",
     "web-vitals": "^2.1.0"
   },
