--- a/app/firebase.json
+++ b/app/firebase.json
@@ -18,7 +18,8 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ]
+    ],
+    "entryPoint": "./app"
   },
   "storage": {
     "rules": "storage.rules"
