--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
+    "recharts": "^2.1.9",
     "twitter-api-v2": "^1.11.0",
     "web-vitals": "^2.1.0"
   },
