--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
               cd ./app
+              yarn upgrade
               yarn run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
