--- a/app/package.json
+++ b/app/package.json
@@ -17,13 +17,13 @@
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "postcss": "^8.1.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
     "recharts": "^2.1.9",
-    "twitter-api-v2": "^1.11.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
